table alignment issue resolution

--- a/packages/frontend/src/components/mbc/notification/Notifications.scss
+++ b/packages/frontend/src/components/mbc/notification/Notifications.scss
@@ -60,10 +60,10 @@
               min-width: 400px;
             }
             &:nth-child(2) {
-              min-width: 150px;
+              min-width: 200px;
             }
             &:nth-child(3) {
-              min-width: 100px;
+              min-width: 150px;
             }
           }
         }
@@ -77,10 +77,10 @@
             min-width: 400px;
           }
           &:nth-child(2) {
-            min-width: 150px;
+            min-width: 200px;
           }
           &:nth-child(3) {
-            min-width: 100px;
+            min-width: 150px;
           }
           h6 {
             font-weight: bold;
